load("@buildifier_prebuilt//:rules.bzl", "buildifier")

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
)
