load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "utils",
    srcs = [
        "utils/lib.rs",
        "utils/paths.rs",
        "utils/runner.rs",
    ],
)

rust_test(
    name = "echo",
    size = "small",
    srcs = ["echo/test_echo.rs"],
    data = [
        ":maelstrom/lib/maelstrom.jar",
    ],
    deps = [
        ":utils",
        "//echo",
    ],
)

rust_test(
    name = "echo-cpp",
    size = "small",
    srcs = ["echo-cpp/test_echo.rs"],
    data = [
        ":maelstrom/lib/maelstrom.jar",
    ],
    deps = [
        ":utils",
        "//echo-cpp",
    ],
)

rust_test(
    name = "broadcast",
    size = "small",
    srcs = ["broadcast/test_broadcast.rs"],
    data = [
        ":maelstrom/lib/maelstrom.jar",
    ],
    deps = [
        ":utils",
        "//broadcast",
    ],
)
